[PE] When painting collapsed borders, snap size to whole pixels

For now we don't fully support subpixel layout in tables, but may
produce subpixel layout results and different heights for cells in
the same row (crbug.com/838401).

Now use the traditional method to snap size to pixels before
applying paint offset for collapsed borders.

Bug: 834648
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ic8866e1a9d52bb6b60ea96dfda692040af8ecea8
Reviewed-on: https://chromium-review.googlesource.com/1036305
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555171}