third_party/blink/renderer/core/paint/collapsed_border_painter.cc
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/paint/block_painter.h"
 #include "third_party/blink/renderer/core/paint/object_painter.h"
 #include "third_party/blink/renderer/core/paint/paint_info.h"
+#include "third_party/blink/renderer/core/paint/table_cell_painter.h"
 
 namespace blink {
 
@@ -350,8 +351,9 @@ void CollapsedBorderPainter::PaintCollapsedBorders(
   // Now left=start_, right=end_, before_=top, after_=bottom.
 
   // Collapsed borders are half inside and half outside of |rect|.
-  IntRect rect =
-      PixelSnappedIntRect(paint_offset + cell_.Location(), cell_.Size());
+  IntRect rect = PixelSnappedIntRect(
+      TableCellPainter(cell_).PaintRectNotIncludingVisualOverflow(
+          paint_offset + cell_.Location()));
   // |paint_rect| covers the whole collapsed borders.
   IntRect paint_rect = rect;
   paint_rect.Expand(IntRectOutsets(before_.outer_width, end_.outer_width,
