third_party/blink/renderer/core/paint/table_cell_painter.h
@@ -34,9 +34,10 @@ class TableCellPainter {
                                     const LayoutPoint& paint_offset);
   void PaintMask(const PaintInfo&, const LayoutPoint& paint_offset);
 
- private:
   LayoutRect PaintRectNotIncludingVisualOverflow(
       const LayoutPoint& paint_offset);
+
+ private:
   void PaintBackground(const PaintInfo&,
                        const LayoutRect&,
                        const LayoutObject& background_object);
